# tomledit

./: .Rbuildignore  .gitignore  404.html  CRAN-SUBMISSION  DESCRIPTION  LICENSE-text.html  LICENSE.html  NAMESPACE  NEWS.md  README.md  README.qmd  _pkgdown.yml  authors.html  configure  cran-comments.md  index.html  pkgdown.yml  search.json  sitemap.xml
R/: extendr-wrappers.R  from_toml.R  modify.R  parse.R  toml.R  utils.R  write.R
dev/: raw-toml-test.R  test.R
man/: from_toml.Rd  modify.Rd  read.Rd  toml.Rd  tomledit-package.Rd  write.Rd
news/: index.html
reference/: from_toml.html  get_item.html  index.html  modify.html  read.html  read_toml.html  to_toml.html  toml.html  tomledit-package.html  tomledit.html  write.html
src/: Makevars.in  Makevars.win.in  entrypoint.c  tomledit-win.def
src/rust/: Cargo.toml  vendor-config.toml  vendor.tar.xz
src/rust/src/: array.rs  error_handling.rs  item.rs  lib.rs  table.rs  to_robj.rs  values.rs
tools/: config.R
