[package]
name = 'tomledit'
publish = false
version = '0.1.0'
edition = '2021'

[lib]
crate-type = [ 'staticlib' ]
name = 'tomledit'

[dependencies]
extendr-api = { version = "0.7.1", features = ["result_condition"] }
toml_edit = { version = "0.22.23" }

[profile.release]
codegen-units = 1
lto = true

[patch.crates-io]
extendr-api = { git = "https://github.com/extendr/extendr", branch = "dataptr"}