[package]
name = 'tomledit'
publish = false
version = '0.1.0'
edition = '2021'
rust-version = "1.65.0"

[lib]
crate-type = [ 'staticlib' ]
name = 'tomledit'

[dependencies]
extendr-api = { version = "0.8.0", features = ["result_condition"] }
toml_edit = { version = "0.22.23" }

[profile.release]
codegen-units = 1
lto = true
